gitops/dev/house-control/house-control-namespace.yaml
kind: Namespace
apiVersion: v1
metadata:
  name: house-control
  labels:
    app: house-control
    environment: development
